--- a/azure-gaming-pr/game-dev-virtual-machine/TOC.yml
+++ b/azure-gaming-pr/game-dev-virtual-machine/TOC.yml
@@ -15,7 +15,7 @@
   - name: Create a Virtual Machine with Unreal Engine
     href: create-game-development-vm-for-unreal.md
   - name: Create a Virtual Machine with No Game Engine Installed
-    href: create-game-development-vm-with-no-engine
+    href: create-game-development-vm-with-no-engine.md
   - name: Create a Virtual Machine with an ARM template
     href: create-game-development-vm-arm-template.md
   - name: Create a Virtual Machine with a Bicep template
