--- a/azure-gaming-pr/game-dev-virtual-machine/TOC.yml
+++ b/azure-gaming-pr/game-dev-virtual-machine/TOC.yml
@@ -14,7 +14,7 @@
   items:
   - name: Create a Virtual Machine with Unreal Engine
     href: create-game-development-vm-for-unreal.md
-  - name: Create a Virtual Machine with other Game Engines
+  - name: Create a Virtual Machine with other game engines
     href: create-game-development-vm-with-other-engines.md
   - name: Create a Virtual Machine with an ARM template
     href: create-game-development-vm-arm-template.md
